# multicast-discovery-socket

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
examples/: discovery.rs  interfaces_updates.rs  multiinterface.rs  silent_discovery.rs
src/: config.rs  interfaces.rs  interfaces_fallback.rs  lib.rs  protocol.rs  socket.rs  win_specific.rs
