[package]
name = "multicast-discovery-socket"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ['multicast', 'lan', 'discovery']
description = "Ready to use discovery solution for local networks"

[dependencies]
sha2 = "0.10.9"
log = "0.4.27"
socket2 = "0.5.10"
rand = "0.9.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["socket", "net", "uio"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ['mswsock', 'iphlpapi'] }

[target.'cfg(any(windows, unix))'.dependencies]
if-addrs = "0.13.4"

[dev-dependencies]
simple_logger = "5.0.0"
