[package]
name = "multicast-discovery-socket"
description = "Ready to use discovery solution for local networks"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/skibon02/multicast-discovery-socket"
license = "MIT OR Apache-2.0"
keywords = ['multicast', 'lan', 'discovery']

[dependencies]
log = "0.4.27"
socket2 = "0.6.0"
sha2-const-stable = "0.1.0"
rand = { version = "0.9.1", optional = true }
bincode = { version = "2.0.1", optional = true }

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
nix = { version = "0.30.1", features = ["socket", "net", "uio"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ['mswsock', 'iphlpapi'] }

[target.'cfg(any(target_os="linux", target_os="android", windows))'.dependencies]
if-addrs = "0.13.4"

[build-dependencies]
cfg-expr = "0.20.1"

[dev-dependencies]
simple_logger = "5.0.0"
ctrlc = "3.4.7"

[features]
default = ["bincode", "rand"]
bincode = ["dep:bincode"]
rand = ["dep:rand"]